added new color palette

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 html {
     font-size: 18;
-    background-color: lightgray;
+    background-color: #278AB0;
 }
 
 h1, h2, h3, p {
@@ -19,7 +19,7 @@ nav {
     height: 10%;
     width: 100%;
     flex-direction: row;
-    background-color: lightgrey;
+    background-color: #1C4670;
     padding: 3px;
 }
 
@@ -38,35 +38,39 @@ nav {
 .navitem{
     margin: 10px;
     display: flex;
-    background-color: darkviolet;
+    background-color: #278AB0;
     height: 55%;
     width: auto;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: black;
     border: 2px solid black;
     border-radius: 10px;
 }
 
 .navitem:hover {
-    background-color: darkturquoise;
+    background-color: #1DC690;
     color: black;
     cursor: pointer;
 }
 
 #active_tab {
-    background-color: darkturquoise;
+    background-color: #1DC690;
     color: black;
 }
 
 /*title block settings*/
 
+.start_block_container {
+    background-color: #278AB0;
+}
+
 .start_block {
-    background-image: url(./resources/placeholder-home.jpeg);
+    background-image: url(./resources/home-main.jpeg);
     background-repeat: no-repeat;
     background-position: center;
-    background-color: lightgray;
-    color: darkviolet;
+    background-color: #278AB0;
+    color: #1C4670;
     height: 500px;
     background-size: 900px 500px;
     width: auto;
@@ -74,25 +78,26 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
 
 #description{
     display:flex;
     font-size: .5rem;
-    background-color: white;
+    background-color: ivory;
     opacity: 0.9;
 }
 
 #page_title{
     display: flex;
     font-size: 1.5rem;
-    background-color: white;
+    background-color: ivory;
     opacity: 0.9;
 }
 
 /*subject containers*/
 .subjects {
-    background-color: lightslategray;
+    background-color: #278AB0;
     margin: auto;
 }
 
@@ -103,7 +108,7 @@ nav {
     justify-content: space-evenly;
     padding: 15px 0;
     margin: 0;
-    background-color: lightslategrey;
+    background-color: #278AB0;
 }
 
 .subject1 {
@@ -128,8 +133,8 @@ nav {
 }
 
 #web_link, #light_link{
-    color: darkviolet;
-    background-color:lightgrey;
+    color: #1C4670;
+    background-color:ivory;
     opacity: .8;
 }
 
@@ -148,6 +153,10 @@ nav {
     .subject1, .subject2 {
         width: 45%;
     }
+
+    .footnav p {
+        font-size: 1.5rem
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -163,6 +172,10 @@ nav {
 
     .subject1, .subject2 {
         width: 45%;
+    }
+
+    .footnav p {
+        font-size: 1rem
     }
 }
 
@@ -180,6 +193,10 @@ nav {
     .subject1, .subject2 {
         width: 346px;
     }
+
+    .footnav p {
+        font-size: 1rem
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -196,6 +213,10 @@ nav {
     .subject1, .subject2 {
         width: 346px;
     }
+
+    .footnav p {
+        font-size: 1rem
+    }
 }
 
 /* END SCREEN SETTINGS */
@@ -203,7 +224,7 @@ nav {
 /* footer black settings*/
 
 .footer{
-    background-color: lightgrey;
+    background-color: #1C4670;
     margin: 0px;
     padding: 3px;
 }
@@ -216,4 +237,5 @@ nav {
 
 .footnav p {
     display: inline-block;
+    color: #1DC690;
 }
