--- a/src/lighting/lighting.css
+++ b/src/lighting/lighting.css
@@ -1,6 +1,6 @@
 html {
     font-size: 18;
-    background-color: lightslategray;
+    background-color: #278AB0;
 }
 
 h1, h2, h3, p {
@@ -19,7 +19,7 @@ nav {
     height: 10%;
     width: 100%;
     flex-direction: row;
-    background-color: lightgrey;
+    background-color: #1C4670;
     padding: 3px;
 }
 
@@ -38,31 +38,32 @@ nav {
 .navitem{
     margin: 10px;
     display: flex;
-    background-color: darkviolet;
+    background-color: #278AB0;
     height: 55%;
     width: auto;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: black;
     border: 2px solid black;
     border-radius: 10px;
 }
 
 .navitem:hover {
-    background-color: darkturquoise;
+    background-color: #1DC690;
     color: black;
     cursor: pointer;
 }
 
 #active_tab {
-    background-color: darkturquoise;
+    background-color: #1DC690;
     color: black;
 }
 
 /* Credits */
 .blurb {
     width: 768px;
-    background-color: white;
+    background-color: ivory;
+    color: #1C4670;
     margin: 20px auto;
     padding: 10px;
 }
@@ -147,8 +148,10 @@ ul, li {
 /* END SCREEN SETTINGS */
 
 
+/* footer black settings*/
+
 .footer{
-    background-color: lightgrey;
+    background-color: #1C4670;
     margin: 0px;
     padding: 3px;
 }
@@ -161,4 +164,5 @@ ul, li {
 
 .footnav p {
     display: inline-block;
+    color: #1DC690;
 }
