--- a/src/webdev/webdev.css
+++ b/src/webdev/webdev.css
@@ -1,6 +1,6 @@
 html {
     font-size: 18;
-    background-color: lightslategray;
+    background-color: #278AB0;
 }
 
 h1, h2, h3, p {
@@ -19,7 +19,7 @@ nav {
     height: 10%;
     width: 100%;
     flex-direction: row;
-    background-color: lightgrey;
+    background-color: #1C4670;
     padding: 3px;
 }
 
@@ -38,24 +38,24 @@ nav {
 .navitem{
     margin: 10px;
     display: flex;
-    background-color: darkviolet;
+    background-color: #278AB0;
     height: 55%;
     width: auto;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: black;
     border: 2px solid black;
     border-radius: 10px;
 }
 
 .navitem:hover {
-    background-color: darkturquoise;
+    background-color: #1DC690;
     color: black;
     cursor: pointer;
 }
 
 #active_tab {
-    background-color: darkturquoise;
+    background-color: #1DC690;
     color: black;
 }
 
@@ -63,7 +63,8 @@ nav {
 /* SETTINGS FOR THE REST OF THE STUFF THAT WILL EVENTUALLY GO HERE */
 .web_blurb{
     width: 768px;
-    background-color: white;
+    background-color: ivory;
+    color: #1C4670;
     margin: auto;
     margin-top:20px;
     margin-bottom: 200px;
@@ -73,7 +74,7 @@ nav {
 /* footer black settings*/
 
 .footer{
-    background-color: lightgrey;
+    background-color: #1C4670;
     margin: 0px;
     padding: 3px;
 }
@@ -86,4 +87,5 @@ nav {
 
 .footnav p {
     display: inline-block;
+    color: #1DC690;
 }
